# concordo

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  concordo  concordo.txt  script.txt
docs/html/: CanalTexto_8h.html  CanalTexto_8h__dep__incl.map  CanalTexto_8h__dep__incl.md5  CanalTexto_8h__incl.map  CanalTexto_8h__incl.md5  CanalTexto_8h_source.html  CanalVoz_8h.html  CanalVoz_8h__dep__incl.map  CanalVoz_8h__dep__incl.md5  CanalVoz_8h__incl.map  CanalVoz_8h__incl.md5  CanalVoz_8h_source.html  Canal_8h.html  Canal_8h__dep__incl.map  Canal_8h__dep__incl.md5  Canal_8h__incl.map  Canal_8h__incl.md5  Canal_8h_source.html  Concordo_8h.html  Concordo_8h__dep__incl.map  Concordo_8h__dep__incl.md5  Concordo_8h__incl.map  Concordo_8h__incl.md5  Concordo_8h_source.html  Mensagem_8h.html  Mensagem_8h__dep__incl.map  Mensagem_8h__dep__incl.md5  Mensagem_8h__incl.map  Mensagem_8h__incl.md5  Mensagem_8h_source.html  Menus_8h_source.html  Servidor_8h.html  Servidor_8h__dep__incl.map  Servidor_8h__dep__incl.md5  Servidor_8h__incl.map  Servidor_8h__incl.md5  Servidor_8h_source.html  Sistema_8h.html  Sistema_8h__dep__incl.map  Sistema_8h__dep__incl.md5  (+64 more)
docs/latex/: CanalTexto_8h.tex  CanalTexto_8h__dep__incl.md5  CanalTexto_8h__incl.md5  CanalVoz_8h.tex  CanalVoz_8h__dep__incl.md5  CanalVoz_8h__incl.md5  (+32 more)
include/: Canal.h  CanalTexto.h  CanalVoz.h  Concordo.h  Mensagem.h  Menus.h  Servidor.h  Sistema.h  Usuario.h
src/: Canal.cpp  CanalTexto.cpp  CanalVoz.cpp  Concordo.cpp  Mensagem.cpp  Menus.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp  main.cpp
(+43 files in other folders)
